src/test/resources/purescript_examples/manual/failing/ExportExplicit.purs.psi
FILE
  PsiElement(whitespace)('-- should fail as z does not exist in the module\n')
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('M1')
          PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PureASTWrapperElement(PositionedDeclarationRef)
        PureASTWrapperElement(ValueRef)
          PsiElement(identifier)('x')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(PositionedDeclarationRef)
        PureASTWrapperElement(ValueRef)
          PsiElement(identifier)('y')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(PositionedDeclarationRef)
        PureASTWrapperElement(ValueRef)
          PsiElement(identifier)('z')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('x')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(NumericLiteral)
              PsiElement(natural)('1')
              PsiElement(whitespace)('\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('y')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(NumericLiteral)
              PsiElement(natural)('2')
